--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#09f">
     <link rel="icon" type="image/jpg" href="./imagenes/Carlos.webp">
+    <meta name="description" content="Portafolio de Carlos Martinez con +15 años de experiencia">
 </head>
 <body>
+    <header>
+        <h1>Portafolio de Carlos Martinez</h1>
+        <nav>
+            <a href="#Experiencia">Experiencia</a>
+            <a href="#Proyectos">Proyectos</a> <!--Enlaces Internos-->
+            <a href="www.cisco.com" target="_blank" rel="noreferrer">Proyectos</a>
+        </nav>
+    </header>
+
+
+
+
+
     <!--Etiquetas de Titulos-->
-    <h1>Titulo Principal</h1>
+    
     <h2>Subtitulo Principal</h2>
     <h3>Parrafo Principal</h3>
     <h4>Cuarto Nivel de Subtitulos</h4>
@@ -47,6 +61,64 @@
     
     -->
 
+
+    <!--HTML SEMANTICO SIGNIFICA QUE TIENE SENTIDO-->
+
+    <h2>Proyectos Realizados</h2>
+
+    <aside>
+        <header>
+            <h3>Mis Tecnologias Favoritas</h3>
+        </header>
+        <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Node J.S</li>
+        </ol>
+    </aside>
+<main>
+
+    <article>
+        <header>
+            <p>Desarrollo de un sitio web coorporativo con una interfaza amigable y moderna</p>
+        </header>
+        <footer>
+            <small>Tecnologias Utilizaas: HTML, CSS, JavaScript</small>
+        </footer>
+    </article>
+    <article>
+        <header>
+            <p>Desarrollo de un sitio web coorporativo con una interfaza amigable y moderna</p>
+        </header>
+        <footer>
+            <small>Tecnologias Utilizaas: HTML, CSS, JavaScript</small>
+        </footer>
+    </article>
+    <article>
+        <header>
+            <p>Desarrollo de un sitio web coorporativo con una interfaza amigable y moderna</p>
+        </header>
+        <footer>
+            <small>Tecnologias Utilizaas: HTML, CSS, JavaScript</small>
+        </footer>
+    </article>
+    <>
+        <h2>Formulario de Contacto</h2>
+        < method="post" action="/">
+            <fieldset>
+                <legend>Ingresa tus Datos:</legend>
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name"><br><br>
+                <label for="email">Correo Electronico:</label>
+                <input type="email" id="email" name="email"><br><br>
+                <label for="message">Mensaje:</label>
+                <textarea id="message" name="message"></textarea><br><br>
+                <input type="submit" value="Enviar">
+            </fieldset>
+        </form>
+    </section>
+</main>
 
 
 
